force-app/main/default/objects/ASF_Case_Stage_Config__c/ASF_Case_Stage_Config__c.object-meta.xml
<CustomObject>
    <label>Case Stage Config</label>
    <nameField>
        <displayFormat>CSC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Stage Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>