force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/AfterStageApexClass__c.field-meta.xml
<CustomField>
    <fullName>AfterStageApexClass__c</fullName>
    <description>Apex Class to Take Action After Stage movement</description>
    <label>AfterStageApexClass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>