force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Assign_To_Last_Actioned_Stage__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Last_Actioned_Stage__c</fullName>
    <description>Mention the Stage Name which will be used to determine the last actioned user, and this stage will be assigned to them</description>
    <label>Assign To Last Actioned Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>