force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Backward_Last_Action_User_Queue__c.field-meta.xml
<CustomField>
    <fullName>Backward_Last_Action_User_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backward Last Action User/Queue</label>
    <type>Checkbox</type>
</CustomField>