force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/BeforeStageApexClass__c.field-meta.xml
<CustomField>
    <fullName>BeforeStageApexClass__c</fullName>
    <description>Class Runs Before the Case is Moved to this Stage</description>
    <label>BeforeStageApexClass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>