force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Cache_Refresh_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Cache_Refresh_DateTime__c</fullName>
    <label>Cache Refresh DateTime</label>
    <type>DateTime</type>
</CustomField>