force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Default_Error_Queue__c.field-meta.xml
<CustomField>
    <fullName>Default_Error_Queue__c</fullName>
    <label>Default Error Queue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>