force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Default_Queue__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue__c</fullName>
    <label>Default Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>