force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Default_Queue_user_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue_user_Name__c</fullName>
    <label>Default Queue/user Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>