force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Don_t_show_in_back_stages__c.field-meta.xml
<CustomField>
    <fullName>Don_t_show_in_back_stages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t show in back stages</label>
    <type>Checkbox</type>
</CustomField>