force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Enable_Bulk_Move_to_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Enable_Bulk_Move_to_Next_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabling this checkbox will enable eligible users to use Bulk utility to move cases to next stage from this stage, without UI field validations</inlineHelpText>
    <label>Enable Bulk Move to Next Stage</label>
    <type>Checkbox</type>
</CustomField>