force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Enable_Reassign_Owner__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reassign_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Reassign Owner</label>
    <type>Checkbox</type>
</CustomField>