force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Gateway_Stage__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gateway Stage</label>
    <type>Checkbox</type>
</CustomField>