force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Has_CheckLists__c.field-meta.xml
<CustomField>
    <fullName>Has_CheckLists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has CheckLists</label>
    <type>Checkbox</type>
</CustomField>