force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Has_Same_Owner_Check__c.field-meta.xml
<CustomField>
    <fullName>Has_Same_Owner_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Same Owner Check</label>
    <type>Checkbox</type>
</CustomField>