force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Has_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Has_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Tasks</label>
    <type>Checkbox</type>
</CustomField>