force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Is_Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval Stage</label>
    <type>Checkbox</type>
</CustomField>