force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Manager_Escalation_Levels__c.field-meta.xml
<CustomField>
    <fullName>Manager_Escalation_Levels__c</fullName>
    <label>Manager Escalation Levels</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>