force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Mandatory_Approval__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Approval</label>
    <type>Checkbox</type>
</CustomField>