force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Manual_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manual_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Manual Approval</label>
    <type>Checkbox</type>
</CustomField>