force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Manual_Backward_Stage__c.field-meta.xml
<CustomField>
    <fullName>Manual_Backward_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this Stage Allowed to be moved to, in a backward manual movement</description>
    <label>Manual Backward Stage</label>
    <type>Checkbox</type>
</CustomField>