force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Manual_Stage__c.field-meta.xml
<CustomField>
    <fullName>Manual_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Stage</label>
    <type>Checkbox</type>
</CustomField>