force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/No_Action_stage__c.field-meta.xml
<CustomField>
    <fullName>No_Action_stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To determine if actions should be visible for Pending With CAMS case stage</description>
    <label>No Action stage</label>
    <type>Checkbox</type>
</CustomField>