force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Optional_Stage__c.field-meta.xml
<CustomField>
    <fullName>Optional_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional Stage</label>
    <type>Checkbox</type>
</CustomField>