force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Owner_Check_Stages__c.field-meta.xml
<CustomField>
    <fullName>Owner_Check_Stages__c</fullName>
    <label>Owner Check Stages</label>
    <type>TextArea</type>
</CustomField>