force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Parent_C3_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_C3_Record__c</fullName>
    <formula>Case_Category_Config__r.CCC_External_Id__c</formula>
    <label>Parent C3 Record</label>
    <type>Text</type>
</CustomField>