force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Query_Fields__c.field-meta.xml
<CustomField>
    <fullName>Query_Fields__c</fullName>
    <label>Query Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>