force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Save_Data_On_Back__c.field-meta.xml
<CustomField>
    <fullName>Save_Data_On_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Data On Back?</label>
    <type>Checkbox</type>
</CustomField>