force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/SLA_Override_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SLA_Override_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Override Enabled</label>
    <type>Checkbox</type>
</CustomField>