force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/SLA_Target_3__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA Target 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Stage_Configs2</relationshipName>
    <type>Lookup</type>
</CustomField>