force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/SLA_Target_3_Type__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target_3_Type__c</fullName>
    <label>SLA Target 3 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>