force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Stage_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Stage_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stage External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>