force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Stage_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Stage_Help_Text__c</fullName>
    <description>On hover , show this value . Show in Path</description>
    <label>Stage Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>