force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Stage_Reopen_SLA_2__c.field-meta.xml
<CustomField>
    <fullName>Stage_Reopen_SLA_2__c</fullName>
    <label>Stage Reopen SLA 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>