force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Stage_SLA_3__c.field-meta.xml
<CustomField>
    <fullName>Stage_SLA_3__c</fullName>
    <label>Stage SLA 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>