force-app/main/default/objects/ASF_Case_Stage_Config__c/fields/Status_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Status_Mapping__c</fullName>
    <label>Status Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>